<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/dark_blue"
            app:contentScrim="@color/dark_blue"
            app:expandedTitleMarginEnd="@dimen/_64mdp"
            app:expandedTitleMarginStart="@dimen/_48mdp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250mdp"
                android:scaleType="centerCrop"
                android:transitionName="imageView"
                app:layout_collapseMode="parallax" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark_blue"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_100mdp"
                android:layout_height="@dimen/_100mdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16mdp"
                android:src="#CCC9C9"
                android:transitionName="imageView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="?attr/textAppearanceHeadline6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8mdp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/the_wall"
                android:textColor="@android:color/white"
                android:transitionName="textview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/textView2"
                style="?attr/textAppearanceCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8mdp"
                android:text="@string/year_sample"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                style="?attr/textAppearanceCaption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8mdp"
                android:text="@string/film_sample"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8mdp"
                android:clipToPadding="true"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.5"
                    android:padding="@dimen/_16mdp"
                    android:text="@string/lorem"
                    android:textColor="@android:color/darker_gray" />


            </androidx.core.widget.NestedScrollView>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8mdp"
                android:layout_marginTop="@dimen/_16mdp"
                android:layout_marginEnd="@dimen/_8mdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rateNow">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="@dimen/_66mdp"
                        android:layout_height="@dimen/_66mdp"
                        android:src="@drawable/actor" />

                    <TextView
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="@dimen/_4mdp"
                        android:paddingRight="@dimen/_4mdp"
                        android:text="@string/actor_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold"
                        android:transitionName="textview" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image2"
                        android:layout_width="@dimen/_66mdp"
                        android:layout_height="@dimen/_66mdp"
                        android:src="@drawable/actor" />

                    <TextView
                        android:id="@+id/desc2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="@dimen/_4mdp"
                        android:paddingRight="@dimen/_4mdp"
                        android:text="@string/actor_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold"
                        android:transitionName="textview" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image3"
                        android:layout_width="@dimen/_66mdp"
                        android:layout_height="@dimen/_66mdp"
                        android:src="@drawable/actor" />

                    <TextView
                        android:id="@+id/desc3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="@dimen/_4mdp"
                        android:paddingRight="@dimen/_4mdp"
                        android:text="@string/actor_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold"
                        android:transitionName="textview" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image4"
                        android:layout_width="@dimen/_66mdp"
                        android:layout_height="@dimen/_66mdp"
                        android:src="@drawable/actor" />

                    <TextView
                        android:id="@+id/desc4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:paddingLeft="@dimen/_4mdp"
                        android:paddingRight="@dimen/_4mdp"
                        android:text="@string/actor_name"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold"
                        android:transitionName="textview" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/desc454"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_24mdp"
                android:gravity="center"
                android:paddingLeft="@dimen/_4mdp"
                android:paddingRight="@dimen/_4mdp"
                android:text="@string/studio"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:transitionName="textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

            <TextView
                android:id="@+id/desc5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_8mdp"
                android:gravity="center"
                android:paddingLeft="@dimen/_4mdp"
                android:paddingRight="@dimen/_4mdp"
                android:text="@string/genre"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:transitionName="textview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc454" />

            <TextView
                android:id="@+id/desc44"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:gravity="center"
                android:paddingLeft="@dimen/_4mdp"
                android:paddingRight="@dimen/_4mdp"
                android:text="@string/studio_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:transitionName="textview"
                app:layout_constraintBottom_toBottomOf="@+id/desc454"
                app:layout_constraintStart_toEndOf="@+id/desc454"
                app:layout_constraintTop_toTopOf="@+id/desc454" />

            <TextView
                android:id="@+id/desc6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_12mdp"
                android:gravity="center"
                android:paddingLeft="@dimen/_4mdp"
                android:paddingRight="@dimen/_4mdp"
                android:text="@string/film_cat"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"
                android:transitionName="textview"
                app:layout_constraintBottom_toBottomOf="@+id/desc5"
                app:layout_constraintStart_toEndOf="@+id/desc5"
                app:layout_constraintTop_toTopOf="@+id/desc5"
                app:layout_constraintVertical_bias="1.0" />

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_4mdp"
                android:isIndicator="true"
                android:numStars="5"
                android:progressTint="@color/yello"
                android:rating="4.2"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />


            <com.google.android.material.chip.Chip
                android:id="@+id/rateNow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16mdp"
                android:layout_marginEnd="@dimen/_8mdp"
                android:text="@string/rate_now"
                app:chipIcon="@drawable/ic_stars_black_24dp"
                app:layout_constraintEnd_toStartOf="@+id/watchNow"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />

            <com.google.android.material.chip.Chip
                android:id="@+id/watchNow"
                style="@style/Widget.MaterialComponents.Chip.Action"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/watch_now"
                android:textColor="@color/green"
                app:chipIcon="@drawable/ic_play_circle_filled_black_24dp"
                app:chipIconTint="@color/green"
                app:layout_constraintBottom_toBottomOf="@+id/rateNow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/rateNow"
                app:layout_constraintTop_toTopOf="@+id/rateNow" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
