<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lite_blue">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/lite_blue"
            app:contentScrim="@color/dark_blue"
            app:expandedTitleMarginEnd="@dimen/_64mdp"
            app:expandedTitleMarginStart="@dimen/_48mdp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250mdp"
                app:layout_collapseMode="parallax">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_16mdp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_24mdp"
                        android:layout_marginEnd="@dimen/_24mdp"
                        android:layout_marginBottom="@dimen/_8mdp"
                        android:text="@string/serach_title_text"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@color/grey11" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/materialCardView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_20mdp"
                        android:layout_marginTop="@dimen/_16mdp"
                        android:layout_marginEnd="@dimen/_20mdp"
                        app:cardBackgroundColor="#13A9F0"
                        app:cardCornerRadius="@dimen/_24font_mdp"
                        app:cardElevation="0dp"
                        app:cardUseCompatPadding="false">

                        <EditText
                            android:id="@+id/search_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_4mdp"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_search_black_24dp"
                            android:drawablePadding="@dimen/_8mdp"
                            android:hint="Search Films"
                            android:inputType="text"
                            android:maxLines="1"
                            android:padding="@dimen/_8mdp"
                            android:textColor="@android:color/white"
                            android:textColorHint="#F5E9E9" />
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </FrameLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/top_rounded_corner"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8mdp"
                android:layout_marginTop="@dimen/_12mdp"
                android:layout_marginRight="@dimen/_8mdp"
                android:text="@string/recommended_for_you"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@android:color/darker_gray" />


            <HorizontalScrollView
                android:id="@+id/horizontalScrollView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <include layout="@layout/row_horizontal_scroll_item" />

                    <include layout="@layout/row_horizontal_scroll_item" />
                </LinearLayout>

            </HorizontalScrollView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="8dp"
                android:text="@string/top_rated"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@android:color/darker_gray" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movieList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>